--- a/PositionalGuide/PositionalGuide.csproj
+++ b/PositionalGuide/PositionalGuide.csproj
@@ -6,11 +6,10 @@
 		<Version>2.0</Version>
 		<Description>Provides drawn guidelines to see where you need to stand to hit enemies with positionals</Description>
 		<PackageProjectUrl>https://github.com/PrincessRTFM/PositionalGuide</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/PrincessRTFM/PositionalGuide.git</RepositoryUrl>
 		<Copyright>Copyleft Vixen 2022</Copyright>
 	</PropertyGroup>
-	
 	<PropertyGroup>
+		<RepositoryUrl>$(PackageProjectUrl).git</RepositoryUrl>
 		<OutputType>Library</OutputType>
 		<Platforms>x64</Platforms>
 		<PlatformTarget>x64</PlatformTarget>
