Update workflow to specify plugin owner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,4 @@ jobs:
       with:
         token: ${{ secrets.PAT }}
         plugin_name: ${{ env.INTERNAL_NAME }}
+        plugin_owners: PrincessRTFM
