--- a/PositionalGuide/dalamud.targets
+++ b/PositionalGuide/dalamud.targets
@@ -20,7 +20,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DalamudPackager" Version="2.1.10" />
+		<PackageReference Include="DalamudPackager" Version="2.1.11" />
 		<Reference Include="Newtonsoft.Json">
 			<HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
 			<Private>False</Private>
@@ -52,6 +52,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Remove="dalamud.targets" />
 		<None Remove="dalamud-plugin-ui-colours.png" />
 	</ItemGroup>
 
