Use .props for the framework csproj include files

--- a/PositionalGuide/PositionalGuide.csproj
+++ b/PositionalGuide/PositionalGuide.csproj
@@ -8,6 +8,6 @@
 		<PackageProjectUrl>https://github.com/PrincessRTFM/PositionalAssistant</PackageProjectUrl>
 	</PropertyGroup>
 
-	<Import Project="dalamud.targets" />
+	<Import Project="dalamud.props" />
 
 </Project>
