--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,21 @@
-# Remove the line below if you want to inherit .editorconfig settings from higher directories
-root = true
-
 [*]
 
 # Indentation and spacing
-indent_size = 4
 indent_style = tab
 
-# New line preferences
-end_of_line = crlf
+# Newline and whitespace preferences
+end_of_line = auto
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-# C# files
+charset = utf-8
+
+[*.{yml,yaml}]
+
+# YAML requires spaces for indentation
+indent_style = space
+indent_size = 4
+
 [*.cs]
 
 # Organize usings
@@ -115,6 +119,9 @@ csharp_style_throw_expression = true:suggestion
 csharp_style_unused_value_assignment_preference = discard_variable:silent
 csharp_style_unused_value_expression_statement_preference = discard_variable:silent
 
+# IDE0305: Collection initialization can be simplified (using .ToArray())
+dotnet_diagnostic.IDE0305.severity = none
+
 # 'using' directive preferences
 csharp_using_directive_placement = outside_namespace:suggestion
 
@@ -165,6 +172,12 @@ csharp_preserve_single_line_statements = false
 
 #### Naming styles ####
 
+# Style Definitions
+dotnet_naming_style.pascal_case_style.capitalization               = pascal_case
+dotnet_naming_style.I_prefix_style.required_prefix                 = I
+dotnet_naming_style.I_prefix_style.capitalization                  = pascal_case
+dotnet_naming_style.camel_case_style.capitalization     = camel_case
+
 # Use PascalCase for constant fields
 dotnet_naming_rule.constant_fields_should_be_pascal_case.severity  = warning
 dotnet_naming_rule.constant_fields_should_be_pascal_case.symbols   = constant_fields
@@ -178,7 +191,7 @@ dotnet_naming_rule.pascal_case_for_public_fields.severity          = warning
 dotnet_naming_rule.pascal_case_for_public_fields.symbols           = public_fields
 dotnet_naming_rule.pascal_case_for_public_fields.style             = pascal_case_style
 dotnet_naming_symbols.public_fields.applicable_kinds               = field
-dotnet_naming_symbols.public_fields.applicable_accessibilities     = public
+dotnet_naming_symbols.public_fields.applicable_accessibilities           = public
 
 # Interfaces must be PascalCase and have an I prefix
 dotnet_naming_rule.interfaces_start_with_I.severity                = warning
@@ -187,16 +200,153 @@ dotnet_naming_rule.interfaces_start_with_I.style                   = I_prefix_st
 dotnet_naming_symbols.any_interface.applicable_kinds               = interface
 dotnet_naming_symbols.any_interface.applicable_accessibilities     = *
 
-# Classes, structs, methods, enums, events, properties, namespaces, delegates must be PascalCase
+# Private properties, methods must be camelCase
+dotnet_naming_rule.privates_naming.severity                              = warning
+dotnet_naming_rule.privates_naming.symbols                               = privates
+dotnet_naming_rule.privates_naming.style                                 = camel_case_style
+dotnet_naming_symbols.privates.applicable_kinds                          = property,method
+dotnet_naming_symbols.privates.applicable_accessibilities                = private
+
+# Types, namespaces, delegates, events, non-private properties/methods, type parameters must be PascalCase
 dotnet_naming_rule.general_naming.severity                         = warning
 dotnet_naming_rule.general_naming.symbols                          = general
 dotnet_naming_rule.general_naming.style                            = pascal_case_style
-dotnet_naming_symbols.general.applicable_kinds                     = class,struct,enum,property,method,event,namespace,delegate
-dotnet_naming_symbols.general.applicable_accessibilities           = *
+dotnet_naming_symbols.general.applicable_kinds                     = class,struct,enum,namespace,delegate,event,property,method,type_parameter
+dotnet_naming_symbols.general.applicable_accessibilities                 = *
 
 # Everything else is camelCase
-dotnet_naming_rule.everything_else_naming.severity                 = warning
-dotnet_naming_rule.everything_else_naming.symbols                  = everything_else
-dotnet_naming_rule.everything_else_naming.style                    = camel_case_style
-dotnet_naming_symbols.everything_else.applicable_kinds             = *
-dotnet_naming_symbols.everything_else.applicable_accessibilities   = *
+dotnet_naming_rule.everything_else_naming.severity                       = warning
+dotnet_naming_rule.everything_else_naming.symbols                        = everything_else
+dotnet_naming_rule.everything_else_naming.style                          = camel_case_style
+dotnet_naming_symbols.everything_else.applicable_kinds                   = *
+dotnet_naming_symbols.everything_else.applicable_accessibilities         = *
+
+[*.lua]
+
+# none/single/double
+quote_style = double
+
+# this mean utf8 length , if this is 'unset' then the line width is no longer checked
+# this option decides when to chopdown the code
+max_line_length = unset
+
+#  none / comma / semicolon / only_kv_colon
+table_separator_style = only_kv_colon
+
+#optional keep/never/always/smart
+trailing_table_separator = smart
+
+# keep/remove/remove_table_only/remove_string_only
+call_arg_parentheses = remove_table_only
+
+detect_end_of_line = false
+
+space_around_table_field_list = true
+
+space_before_attribute = true
+
+space_before_function_open_parenthesis = false
+
+space_before_function_call_open_parenthesis = false
+
+space_before_closure_open_parenthesis = false
+
+# optional always/only_string/only_table/none
+# or true/false
+space_before_function_call_single_arg = only_string
+
+space_before_open_square_bracket = false
+
+space_inside_function_call_parentheses = false
+
+space_inside_function_param_list_parentheses = false
+
+space_inside_square_brackets = false
+
+# like t[#t+1] = 1
+space_around_table_append_operator = true
+
+ignore_spaces_inside_function_call = false
+
+space_before_inline_comment = 1
+
+space_around_math_operator = true
+
+space_after_comma = true
+
+space_after_comma_in_for_statement = true
+
+# true/false or none/always/no_space_asym
+space_around_concat_operator = true
+
+space_around_logical_operator = true
+
+# true/false or none/always/no_space_asym
+space_around_assign_operator = true
+
+align_call_args = false
+
+align_function_params = false
+
+align_continuous_assign_statement = false
+
+align_continuous_rect_table_field = false
+
+align_continuous_line_space = 2
+
+align_if_branch = false
+
+# option none / always / contain_curly/
+align_array_table = false
+
+align_continuous_similar_call_args = false
+
+align_continuous_inline_comment = false
+# option none / always / only_call_stmt
+align_chain_expr = none
+
+never_indent_before_if_condition = false
+
+never_indent_comment_on_if_branch = false
+
+keep_indents_on_empty_lines = false
+
+# The following (line_space_*) configuration supports four expressions
+# keep
+# fixed(n)
+# min(n)
+# max(n)
+# for eg. min(2)
+
+line_space_after_if_statement = keep
+
+line_space_after_do_statement = keep
+
+line_space_after_while_statement = keep
+
+line_space_after_repeat_statement = keep
+
+line_space_after_for_statement = keep
+
+line_space_after_local_or_assign_statement = keep
+
+line_space_after_function_statement = fixed(2)
+
+line_space_after_expression_statement = keep
+
+line_space_after_comment = keep
+
+line_space_around_block = fixed(1)
+
+break_all_list_when_line_exceed = false
+
+auto_collapse_lines = false
+
+break_before_braces = false
+
+ignore_space_after_colon = false
+
+remove_call_expression_list_finish_comma = false
+
+# keep / always / same_line / repalce_with_newline
+end_statement_with_semicolon = repalce_with_newline
