--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   INTERNAL_NAME: PositionalGuide
-  CONFIGURATION: Release
+  CONFIGURATION: release
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_NOLOGO: true
 
@@ -71,7 +71,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: PluginRepoZip
-        path: ${{ env.INTERNAL_NAME }}/bin/${{ env.CONFIGURATION }}/${{ env.INTERNAL_NAME }}
+        path: ${{ env.INTERNAL_NAME }}/bin/${{ env.CONFIGURATION }}/portable/${{ env.INTERNAL_NAME }}
         if-no-files-found: error
         retention-days: 14
     - name: Tag
