--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   INTERNAL_NAME: PositionalGuide
-  CONFIGURATION: Release
+  CONFIGURATION: release
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_NOLOGO: true
 
@@ -25,7 +25,7 @@ jobs:
     runs-on: windows-2022
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
     - name: Setup MSBuild
@@ -39,9 +39,9 @@ jobs:
     - name: Build
       run: dotnet build -c ${{ env.CONFIGURATION }} --no-restore
     - name: Upload build
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: PluginRepoZip
-        path: ${{ env.INTERNAL_NAME }}/bin/${{ env.CONFIGURATION }}/${{ env.INTERNAL_NAME }}
+        path: ${{ env.INTERNAL_NAME }}/bin/${{ env.CONFIGURATION }}/portable/${{ env.INTERNAL_NAME }}
         if-no-files-found: error
         retention-days: 14
